# MinManhattan

./: CMakeLists.txt  README.md
src/: test.cpp
src/lib/: manhattan.cpp  manhattan.h
